# search-agent

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  main.py  pyproject.toml
docs/: OPTIMIZED_LOG.md
src/: __init__.py
src/agents/: __init__.py
src/agents/components/: __init__.py  action.py  plan.py  summarizer.py
src/agents/components/prompt/: plan.py  summarizer.py
src/agents/context/: source_filter.py  state.py
src/agents/error/: __init__.py
src/agents/workflow/: __init__.py  graph.py  runner.py  state.py
src/components/: __init__.py  action.py  optimizer.py  plan.py  summarizer.py
src/context/: __init__.py  search_history.py  source_filter.py  state.py  validation_tracker.py
src/error/: __init__.py  no_input_error.py  no_search_result_error.py
src/routes/: health_route.py  index_route.py  search_route.py
src/utils/: __init__.py  get_workers.py  logger.py
src/workflow/: __init__.py  graph.py  runner.py  state.py
static/: index.html  script.js  styles.css
